# motto-reach

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md  agent.py  bootstrap_droplet.sh  cron_setup.sh  maritime.toml  observability.py  ollama_client.py  pyproject.toml  remote_deploy.sh  reporter.py  requirements.txt  run.sh  sentry_init.py  sharpener.py
.devcontainer/: devcontainer.json
.fleet/: ci-broken-investigation.md
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: dependabot-auto-merge.yml  deploy.yml  release-please.yml  test.yml
agent/: distributor.py
data/: abcd_state.json  state.json
distribution/: .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  release-please-config.json  ruff.toml  sentry_init.py
distribution/.fleet/: naming-audit-passed.md
distribution/.github/: pull_request_template.md
distribution/.github/ISSUE_TEMPLATE/: feature_request.yml  ops_incident.yml
distribution/agent/: __init__.py  distributor.py
distribution/tools/: __init__.py  beehiiv_publisher.py  linkedin_groups.py  transformer.py
docs/: README.md
outreach/: AGENTS.md  README.md  abcd.py  agent.py  observability.py  ollama_client.py  reddit_client.py  reporter.py  sharpener.py  x_client.py
outreach/data/: reddit_credentials.json
tests/: __init__.py  test_distribution.py  test_outreach.py
tools/: beehiiv_publisher.py  classifier.py  facebook_groups.py  linkedin_company.py  linkedin_groups.py  queue.py  reddit_poster.py  transformer.py  x_poster.py
